--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wizwalker"
-version = "1.8.2"
+version = "1.9.0"
 description = "Wizard101 scripting library"
 authors = ["StarrFox <starrfox6312@gmail.com>"]
 license = "GPL-3.0-or-later"
@@ -9,23 +9,22 @@ repository = "https://github.com/StarrFox/wizwalker"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-loguru = "^0.5.1"
-aioconsole = "^0.2.1"
-aiofiles = "^0.7.0"
-pymem = "1.8.3"
+loguru = "^0.7.2"
+aioconsole = "^0.7.1"
+aiofiles = "^23.2.1"
+pymem = "^1.13.1"
 appdirs = "^1.4.4"
-click = "^7.1.2"
-click_default_group = "^1.2.2"
-aiomonitor = "^0.4.5"
-terminaltables = "^3.1.0"
-janus = "^0.6.1"
-pefile = "^2021.5.24"
-regex = "^2022.1.18"
+click = "^8.1.7"
+click_default_group = "^1.2.4"
+aiomonitor = "^0.7.0"
+terminaltables = "^3.1.10"
+janus = "^1.0.0"
+pefile = "^2023.2.7"
+regex = "^2024.5.15"
 
 [tool.poetry.dev-dependencies]
-pyinstaller = "^3.6"
 pywin32-ctypes = "^0.2.0"
-pdoc = "^12.0.0"
+pdoc = "^14.5.0"
 
 [tool.poetry.scripts]
 wizwalker = "wizwalker.__main__:main"
